<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- SIGNUP BUTTON -->
        <Button
            android:id="@+id/newgame_button"
            style="@style/menu_button_style"
            android:layout_above="@+id/loadgame_button"
            android:text="@string/newgame_button_label" />

        <!-- LOGIN BUTTON -->
        <Button
            android:id="@+id/loadgame_button"
            style="@style/menu_button_style"
            android:layout_centerInParent="true"
            android:text="@string/loadgame_button_label" />

        <!-- CREDITS -->
        <Button
            android:id="@+id/credits_button"
            style="@style/menu_button_style"
            android:layout_below="@+id/loadgame_button"
            android:text="@string/credits_button_label" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>