<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".levels.Level5_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- TITLE -->
        <TextView
            android:id="@+id/lvl5_title"
            style="@style/main_textView_style"
            android:layout_marginTop="@dimen/level_margin"
            android:fontFamily="@font/trade_winds"
            android:text="@string/lv5" />

        <!-- BACK BUTTON -->
        <Button
            android:id="@+id/back_button"
            style="@style/back_button_style" />

        <!-- ENIGMA -->
        <TextView
            android:id="@+id/lvl5_text"
            style="@style/main_textView_style"
            android:layout_below="@+id/lvl5_title"
            android:fontFamily="@font/trade_winds"
            android:text="@string/lv5_text" />

        <!-- MAP -->
        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_map"
            android:layout_below="@+id/lvl5_text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp" />

        <!-- BUTTON FOR THE WIN -->
        <Button
            android:id="@+id/button_map"
            style="@style/main_button_style"
            android:text="@string/lv5_start" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>